@@ -1,4 +1,9 @@
 2005-08-30 Alain Magloire
+	PR 108202, code from Devin Steffler.
+	* parser/org/eclipse/cdt/internal/core/dom/parser/c/GNUCSourceParser.java
+	* parser/org/eclipse/cdt/internal/core/do/parser/cpp/GNUCPPSourceParser.java
+
+2005-08-30 Alain Magloire
 	PR 107150, code/patch written by Devin Steffler
 	* parser/org/eclipse/cdt/internal/core/parser/scanner2/BaseScanner.java
 
